build(deps): add vd-log4j2-logging-connector

--- a/pom.xml
+++ b/pom.xml
@@ -67,5 +67,10 @@
 			<artifactId>vd-cli-util</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>de.voomdoon.logging</groupId>
+			<artifactId>vd-log4j2-logging-connector</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
