--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,18 @@
 		</plugins>
 	</build>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>de.voomdoon.util</groupId>
+				<artifactId>vd-cli-util</artifactId>
+				<classifier>tests</classifier>
+				<version>0.2.0-SNAPSHOT</version>
+				<scope>test</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>de.voomdoon.util</groupId>
